tests/paczka1/small_fuzzy/30774512.err
Error in line 6: jzFhZye A261 17,8
Error in line 14: A261 A991 94,47
Error in line 10: jzFhZye A991 0,2
